# opencv

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: Result.txt  TEST.txt  TODO.txt  _10grclass.cpp  _10grclass.h  _1grclass.cpp  _1grclass.h  _1zlclass.cpp  _1zlclass.h  _20grclass.cpp  _20grclass.h  _2grclass.cpp  _2grclass.h  _2zlclass.cpp  _2zlclass.h  _50grclass.cpp  _50grclass.h  _5grclass.cpp  _5grclass.h  _5zlclass.cpp  _5zlclass.h  action.cpp  action.h  base.cpp  base.h  calibrationclass.cpp  calibrationclass.h  classifier.cpp  classifier.h  element.cpp  element.h  elementgetter.cpp  elementgetter.h  imagewrapper.cpp  imagewrapper.h  invariants.cpp  invariants.h  main.cpp  segmentation.cpp  segmentation.h
